@@ -3,3 +3,4 @@ org.eclipse.jdt.core/debug/indexmanager=true
 org.eclipse.jdt.core/debug/compiler=true
 org.eclipse.jdt.core/debug/javamodel=true
 org.eclipse.jdt.core/debug/javadelta=true
+org.eclipse.jdt.core/debug/hierarchy=true
