@@ -20,6 +20,7 @@ import org.eclipse.jdt.internal.core.builder.*;
 import org.eclipse.jdt.internal.core.*;
 import org.eclipse.jdt.internal.core.builder.impl.*;
 import org.eclipse.jdt.internal.core.builder.impl.ProblemFactory;
+import org.eclipse.jdt.internal.core.hierarchy.TypeHierarchy;
 import org.eclipse.jdt.internal.core.search.indexing.*;
 
 /**
@@ -80,6 +81,7 @@ public final class JavaCore extends Plugin implements IExecutableExtension {
 	private static final String COMPILER_DEBUG = PLUGIN_ID + "/debug/compiler" ; //$NON-NLS-1$
 	private static final String JAVAMODEL_DEBUG = PLUGIN_ID + "/debug/javamodel" ; //$NON-NLS-1$
 	private static final String DELTA_DEBUG = PLUGIN_ID + "/debug/javadelta" ; //$NON-NLS-1$
+	private static final String HIERARCHY_DEBUG = PLUGIN_ID + "/debug/hierarchy" ; //$NON-NLS-1$
 	
 	
 	private static Hashtable Variables = new Hashtable(5);
@@ -1065,6 +1067,8 @@ public final class JavaCore extends Plugin implements IExecutableExtension {
 			option = Platform.getDebugOption(DELTA_DEBUG);
 			if(option != null) DeltaProcessor.VERBOSE = option.equalsIgnoreCase("true") ; //$NON-NLS-1$
 
+			option = Platform.getDebugOption(HIERARCHY_DEBUG);
+			if(option != null) TypeHierarchy.DEBUG = option.equalsIgnoreCase("true") ; //$NON-NLS-1$
 		}
 		
 		JavaModelManager manager = JavaModelManager.getJavaModelManager();
